--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -1,25 +1,18 @@
-{% extends 'events/base.html' %}
-
-{% block content %}
+{% extends 'events/base.html' %} {% block content %}
 
 <style>
-    td{
-        padding: 18px;
-    }
-    tr > .month{
-        font-size: 30px;
-        position: relative;
-        line-height: 70px;
-    }
+  td {
+    padding: 18px;
+  }
+  tr > .month {
+    font-size: 30px;
+    position: relative;
+    line-height: 70px;
+  }
 </style>
 
-
 <center>
-    <div style="
-    margin-top: 85px;">
-
-    {{cal|safe}}
-</div>
+  <div style="margin-top: 85px">{{cal|safe}}</div>
 </center>
 
 
